--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
             <a class="nav-link" href="#info">Info</a>
             <a class="nav-link" href="#story">Story</a>
             <a class="nav-link" href="#gallery">Gallery</a>
+            <a class="nav-link" href="#selamat">Selamat</a>
           </div>
         </div>
       </div>
@@ -432,7 +433,37 @@
       </div>
     </div>
   </section>
+  <section id="selamat" class="story">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-8 col-10 text-center">
+          <h2>Proficiat</h2>
+          <p>Siswa dan Siswi SMA Trinitas yang telah diterima di Perguruan Tinggi Luar, Perguruan Tinggi Negeri, dan Perguruan Tinggi Swasta melalui jalur Prestasi</p>
+        </div>
+      </div>
 
+      <div class="row row-cols-lg-4 row-cols-md-3 row-cols-sm-2 row-cols-1 justify-content-center">
+        <div class="col mt-3">
+          <a href="/img/sekolah/stefi.png"  loading="lazy" data-toggle="lightbox" data-caption="SNBP"
+            data-gallery="mygallery">
+            <img src="/img/sekolah/stefi.png"  loading="lazy" alt="SNBP" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="/img/sekolah/nuel.png"  loading="lazy" data-toggle="lightbox" data-caption="SNBP"
+            data-gallery="mygallery">
+            <img src="/img/sekolah/nuel.png"  loading="lazy" alt="SNBP" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="/img/sekolah/jeni.png"  loading="lazy" data-toggle="lightbox" data-caption="SNBP"
+            data-gallery="mygallery">
+            <img src="/img/sekolah/jeni.png"  loading="lazy" alt="SNBP" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
   
 
   <footer>
