--- a/index.html
+++ b/index.html
@@ -444,21 +444,21 @@
 
       <div class="row row-cols-lg-4 row-cols-md-3 row-cols-sm-2 row-cols-1 justify-content-center">
         <div class="col mt-3">
-          <a href="/img/sekolah/stefi.png"  loading="lazy" data-toggle="lightbox" data-caption="SNBP"
+          <a href="/img/sekolah/stefi.jpg"  loading="lazy" data-toggle="lightbox" data-caption="SNBP"
             data-gallery="mygallery">
-            <img src="/img/sekolah/stefi.png"  loading="lazy" alt="SNBP" class="img-fluid w-100 rounded">
+            <img src="/img/sekolah/stefi.jpg"  loading="lazy" alt="SNBP" class="img-fluid w-100 rounded">
           </a>
         </div>
         <div class="col mt-3">
-          <a href="/img/sekolah/nuel.png"  loading="lazy" data-toggle="lightbox" data-caption="SNBP"
+          <a href="/img/sekolah/nuel.jpg"  loading="lazy" data-toggle="lightbox" data-caption="SNBP"
             data-gallery="mygallery">
-            <img src="/img/sekolah/nuel.png"  loading="lazy" alt="SNBP" class="img-fluid w-100 rounded">
+            <img src="/img/sekolah/nuel.jpg"  loading="lazy" alt="SNBP" class="img-fluid w-100 rounded">
           </a>
         </div>
         <div class="col mt-3">
-          <a href="/img/sekolah/jeni.png"  loading="lazy" data-toggle="lightbox" data-caption="SNBP"
+          <a href="/img/sekolah/jeni.jpg"  loading="lazy" data-toggle="lightbox" data-caption="SNBP"
             data-gallery="mygallery">
-            <img src="/img/sekolah/jeni.png"  loading="lazy" alt="SNBP" class="img-fluid w-100 rounded">
+            <img src="/img/sekolah/jeni.jpg"  loading="lazy" alt="SNBP" class="img-fluid w-100 rounded">
           </a>
         </div>
       </div>
