production naik foto akan dilengkapi selanjutnya

--- a/index.html
+++ b/index.html
@@ -75,7 +75,12 @@
           <p>Oleh karena itu, dengan segala hormat, kami bermaksud untuk mengundang Bapa, Ibu orang tua/wali siswa siswi yang kami banggakan </p>
         </div>
       </div>
-
+      <div class="col mt-3">
+        <a href="/img/sekolah/guru.jpg"  loading="lazy" data-toggle="lightbox" data-caption="Guru"
+          data-gallery="mygallery">
+          <img src="/img/sekolah/guru.jpg"  loading="lazy" alt="Guru" class="img-fluid w-100 rounded">
+        </a>
+      </div>
 
     </div>
   </section>
@@ -190,44 +195,44 @@
                 </div>
               </div>
             </li>
+           
             <li class="timeline-inverted">
-              <div class="timeline-image" style="background-image: url(https://picsum.photos/300/300);"></div>
+              <div class="timeline-image" style="background-image: url(img/sekolah/livein.jpeg);"></div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h3>Retreat</h3>
-                  <span>1 Januari 2005</span>
+                  <h3>Live in</h3>
+                  <span>November 2023</span>
                 </div>
                 <div class="timeline-body">
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto enim eaque obcaecati odit
-                    itaque explicabo quisquam quos at.
+                  <p>Pengalaman Live in di Wonogiri
                   </p>
                 </div>
               </div>
 
             </li>
-            <li>
-              <div class="timeline-image" style="background-image: url(https://picsum.photos/301/301);"></div>
+            <li class="timeline-image">
+              <div class="timeline-image" style="background-image: url(img/sekolah/retreat.jpg);"></div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h3>Live In</h3>
-                  <span>7 November 2009</span>
+                  <h3>Retreat</h3>
+                  <span>Maret 2024</span>
                 </div>
                 <div class="timeline-body">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, deleniti distinctio. Esse quas sit
-                  explicabo corporis magni qui expedita a.
+                  <p>Pengalaman Retreat di Pratista, Lembang
+                  </p>
                 </div>
               </div>
+
             </li>
             <li class="timeline-inverted">
-              <div class="timeline-image" style="background-image: url(https://picsum.photos/300/300);"></div>
+              <div class="timeline-image" style="background-image: url(img/sekolah/bali2.jpg);"></div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
                   <h3>Studi Tour Bali</h3>
-                  <span>1 Januari 2005</span>
+                  <span>November 2024</span>
                 </div>
                 <div class="timeline-body">
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto enim eaque obcaecati odit
-                    itaque explicabo quisquam quos at.
+                  <p>Pengalaman Studi Tour Bali
                   </p>
                 </div>
               </div>
@@ -308,6 +313,42 @@
           <a href="/img/sekolah/kamojang3.jpg"  loading="lazy" data-toggle="lightbox" data-caption="P5 Kamojang"
             data-gallery="mygallery">
             <img src="/img/sekolah/kamojang3.jpg" loading="lazy" alt="P5 Kamojang" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="/img/sekolah/livein.jpg"  loading="lazy" data-toggle="lightbox" data-caption="Live in"
+            data-gallery="mygallery">
+            <img src="/img/sekolah/livein.jpg" loading="lazy" alt="Live in" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="/img/sekolah/livein2.jpg"  loading="lazy" data-toggle="lightbox" data-caption="Live in"
+            data-gallery="mygallery">
+            <img src="/img/sekolah/livein2.jpg" loading="lazy" alt="Live in" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="/img/sekolah/livein3.jpg"  loading="lazy" data-toggle="lightbox" data-caption="Live in"
+            data-gallery="mygallery">
+            <img src="/img/sekolah/livein3.jpg" loading="lazy" alt="Live in" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="/img/sekolah/livein4.jpg"  loading="lazy" data-toggle="lightbox" data-caption="Live in"
+            data-gallery="mygallery">
+            <img src="/img/sekolah/livein4.jpg" loading="lazy" alt="Live in" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="/img/sekolah/retreat.jpg" loading="lazy" data-toggle="lightbox" data-caption="Retreat"
+            data-gallery="mygallery">
+            <img src="/img/sekolah/retreat.jpg" loading="lazy" alt="Retreat" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="/img/sekolah/retreat2.jpg" loading="lazy" data-toggle="lightbox" data-caption="Retreat"
+            data-gallery="mygallery">
+            <img src="/img/sekolah/retreat2.jpg" loading="lazy" alt="Retreat" class="img-fluid w-100 rounded">
           </a>
         </div>
         <div class="col mt-3">
