tambah gambar beasiswa

--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
       <div class="row justify-content-center">
         <div class="col-md-8 col-10 text-center">
           <h2>Proficiat</h2>
-          <p>Siswa dan Siswi SMA Trinitas yang telah diterima di Perguruan Tinggi Luar, Perguruan Tinggi Negeri, dan Perguruan Tinggi Swasta melalui jalur Prestasi</p>
+          <p>Siswa dan Siswi SMA Trinitas yang telah diterima di Perguruan Tinggi Luar, Perguruan Tinggi Negeri jalur Prestasi, dan Beasiswa Perguruan Tinggi Swasta</p>
         </div>
       </div>
 
@@ -500,6 +500,18 @@
           <a href="/img/sekolah/jeni.jpg"  loading="lazy" data-toggle="lightbox" data-caption="SNBP"
             data-gallery="mygallery">
             <img src="/img/sekolah/jeni.jpg"  loading="lazy" alt="SNBP" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="/img/sekolah/willie.jpg"  loading="lazy" data-toggle="lightbox" data-caption="Beasiswa"
+            data-gallery="mygallery">
+            <img src="/img/sekolah/willie.jpg"  loading="lazy" alt="Beasiswa" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="/img/sekolah/frans.jpg"  loading="lazy" data-toggle="lightbox" data-caption="Beasiswa"
+            data-gallery="mygallery">
+            <img src="/img/sekolah/frans.jpg"  loading="lazy" alt="Beasiswa" class="img-fluid w-100 rounded">
           </a>
         </div>
       </div>
