--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 </div>
                 <div class="card-footer">
                   <i class="bi bi-check-square d-block"></i>
-                      <span>Dress Code Orang Tua/Wali : Pakaian Rapi tidak menggunakan kaos</span>
+                      <span>Dress Code Orang Tua/Wali : Batik</span>
                 </div> 
               </div>
             </div>
@@ -565,6 +565,7 @@
           <ul class="mt-3">
             <li><a href="https://instagram.com/smatrinitasofficial"><i class="bi bi-instagram"></i></a></li>
             <li><a href="https://www.youtube.com/@osissmatrinitasofficial2437"><i class="bi bi-youtube"></i></a></li>
+            <small class="block">Problem With Website? Contact: putra@smatrinitas.sch.id</small>
 
           </ul>
         </div>
