--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                   <div class="row justify-content-center">
                     <div class="col-md-6">
                       <i class="bi bi-clock d-block"></i>
-                      <span>09.00 - selesai</span>
+                      <span>08.30 - selesai</span>
                     </div>
                     <div class="col-md-6">
                       <i class="bi bi-calendar3 d-block"></i>
@@ -595,7 +595,8 @@
       year: 2025, // required
       month: 5, // required
       day: 7, // required
-      hours: 9, // Default is 0 [0-23] integer
+      hours: 8, // Default is 0 [0-23] integer
+      minutes: 30, 
       words: { //words displayed into the countdown
         days: { singular: 'hari', plural: 'hari' },
         hours: { singular: 'jam', plural: 'jam' },
