--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="col-md-8 text-center">
           <h2>Acara Pelepasan</h2>
           <h3>Diselenggarakan pada 7 Mei 2025 di GOR YPII Bandung</h3>
-          <p>Oleh karena itu, dengan segala hormat, kami bermaksud untuk mengundang Bapa, Ibu orang tua/wali siswa siswi yang kami banggakan </p>
+          <p>Dengan hormat, kami bermaksud untuk mengundang Bapa/ibu orang tua/wali siswa siswi yang kami banggakan </p>
         </div>
       </div>
       <div class="col mt-3">
