--- a/index.html
+++ b/index.html
@@ -532,7 +532,87 @@
             <img src="/img/sekolah/frans.jpg"  loading="lazy" alt="Beasiswa" class="img-fluid w-100 rounded">
           </a>
         </div>
+        <div class="col mt-3">
+          <a href="/img/baru/alexandra.png"  loading="lazy" data-toggle="lightbox" data-caption="Beasiswa"
+            data-gallery="mygallery">
+            <img src="/img/baru/alexandra.png"  loading="lazy" alt="Beasiswa" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="/img/baru/bastian.png"  loading="lazy" data-toggle="lightbox" data-caption="Beasiswa"
+            data-gallery="mygallery">
+            <img src="/img/baru/bastian.png"  loading="lazy" alt="Beasiswa" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="/img/baru/cecil.png"  loading="lazy" data-toggle="lightbox" data-caption="Beasiswa"
+            data-gallery="mygallery">
+            <img src="/img/baru/cecil.png"  loading="lazy" alt="Beasiswa" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="/img/baru/felicia.png"  loading="lazy" data-toggle="lightbox" data-caption="Beasiswa"
+            data-gallery="mygallery">
+            <img src="/img/baru/felicia.png"  loading="lazy" alt="Beasiswa" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="/img/baru/findlay.png"  loading="lazy" data-toggle="lightbox" data-caption="Beasiswa"
+            data-gallery="mygallery">
+            <img src="/img/baru/findlay.png"  loading="lazy" alt="Beasiswa" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="/img/baru/gabri.png"  loading="lazy" data-toggle="lightbox" data-caption="Beasiswa"
+            data-gallery="mygallery">
+            <img src="/img/baru/gabri.png"  loading="lazy" alt="Beasiswa" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="/img/baru/jefry.png"  loading="lazy" data-toggle="lightbox" data-caption="Beasiswa"
+            data-gallery="mygallery">
+            <img src="/img/baru/jefry.png"  loading="lazy" alt="Beasiswa" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="/img/baru/kiera.png"  loading="lazy" data-toggle="lightbox" data-caption="Beasiswa"
+            data-gallery="mygallery">
+            <img src="/img/baru/kiera.png"  loading="lazy" alt="Beasiswa" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="/img/baru/mike.png"  loading="lazy" data-toggle="lightbox" data-caption="Beasiswa"
+            data-gallery="mygallery">
+            <img src="/img/baru/mike.png"  loading="lazy" alt="Beasiswa" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="/img/baru/nadine.png"  loading="lazy" data-toggle="lightbox" data-caption="Beasiswa"
+            data-gallery="mygallery">
+            <img src="/img/baru/nadine.png"  loading="lazy" alt="Beasiswa" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="/img/baru/ray.png"  loading="lazy" data-toggle="lightbox" data-caption="Beasiswa"
+            data-gallery="mygallery">
+            <img src="/img/baru/ray.png"  loading="lazy" alt="Beasiswa" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="/img/baru/sharen.png"  loading="lazy" data-toggle="lightbox" data-caption="Beasiswa"
+            data-gallery="mygallery">
+            <img src="/img/baru/sharen.png"  loading="lazy" alt="Beasiswa" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="/img/baru/valliandro.png"  loading="lazy" data-toggle="lightbox" data-caption="Beasiswa"
+            data-gallery="mygallery">
+            <img src="/img/baru/valliandro.png"  loading="lazy" alt="Beasiswa" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+
       </div>
+
     </div>
   </section>
   
