--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
   <section id="hero"
     class="hero w-100 h-100 p-3 mx-auto text-center d-flex justify-content-center align-items-center text-white">
     <main>
-      <h1>SMA Trinitas</h1>
-      <h4>Undangan Pelepasan Siswa/Siswi Kelas XII</h4>
-      <h4>Tahun Ajaran 2024/2025</h4>
-      <p>Akan berlangsung dalam waktu:</p>
+      <h1 style = "font-weight: bold; -webkit-text-stroke-color: black ; -webkit-text-stroke-width: 1px;" >SMA Trinitas</h1>
+      <h4 style = "font-weight: bold; -webkit-text-stroke-color: black ; -webkit-text-stroke-width: 1px;" >Undangan Pelepasan Siswa/Siswi Kelas XII</h4>
+      <h4 style = "font-weight: bold;-webkit-text-stroke-color: black ; -webkit-text-stroke-width: 1px;" >Tahun Ajaran 2024/2025</h4>
+      <p style = "font-weight: bold;-webkit-text-stroke-color: black ; -webkit-text-stroke-width: 1px;">Akan berlangsung dalam waktu:</p>
       <div class="simply-countdown"></div>
       <a href="#home" class="btn btn-lg mt-4" onClick="enableScroll()">Lihat Undangan</a>
     </main>
@@ -96,7 +96,7 @@
               <div class="undangan-wrapper">
                 <div class="undangan-left">
                   <div class="day"></div>
-                  <div class="date">RABU 07 MEI 2025</div>
+                  <div class="date">RABU, 07 MEI 2025</div>
                   <div class="month"></div>
                   <div class="year"></div>
                 </div>
