--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
   <section id="hero"
     class="hero w-100 h-100 p-3 mx-auto text-center d-flex justify-content-center align-items-center text-white">
     <main>
-      <h1  >SMA Trinitas</h1>
-      <h4  >Undangan Pelepasan Siswa/Siswi Kelas XII</h4>
-      <h4  >Tahun Ajaran 2024/2025</h4>
-      <p style = "font-weight">Akan berlangsung dalam waktu:</p>
+      <h1 style="color: white; text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.8);">SMA Trinitas</h1>
+      <h4 style="color: white; text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.7);">Undangan Pelepasan Siswa/Siswi Kelas XII</h4>
+      <h4 style="color: white; text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.7);">Tahun Ajaran 2024/2025</h4>
+      <p style="color: white; text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.6);">Akan berlangsung dalam waktu:</p>
+      
       <div class="simply-countdown"></div>
       <a href="#home" class="btn btn-lg mt-4" onClick="enableScroll()">Lihat Undangan</a>
     </main>
