--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     class="hero w-100 h-100 p-3 mx-auto text-center d-flex justify-content-center align-items-center text-white">
     <main>
       <h1 style="color: white; text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.8);">SMA Trinitas</h1>
-      <h4 style="color: white; text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.7);">Undangan Pelepasan Siswa/Siswi Kelas XII</h4>
+      <h4 style="color: white; text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.7);">Undangan Pelepasan Siswa-Siswi Kelas XII</h4>
       <h4 style="color: white; text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.7);">Tahun Ajaran 2024/2025</h4>
       <h4 style="color: white; text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.6);">Akan berlangsung dalam waktu:</h4>
       
