--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <div class="row justify-content-center">
         <div class="col-md-6 text-center">
           <h2>Acara Pelepasan</h2>
-          <p>Dengan hormat, kami bermaksud untuk mengundang orang tua/wali siswa-siswi yang kami banggakan </p>
+          <p>Dengan hormat, kami bermaksud untuk mengundang bapa ibu guru dan karyawan yang kami banggakan </p>
         </div>
       </div>
       <div class="col mt-3">
@@ -102,10 +102,10 @@
                   <div class="year"></div>
                 </div>
                 <div class="undangan-right">
-                  <p class="title"><i class="bi bi-clock me-1"></i>08.30 - selesai</p>
+                  <p class="title"><i class="bi bi-clock me-1"></i>06:30 - selesai</p>
                   <p class="place"><i class="bi bi-geo me-1"></i>GOR YPII Bandung</p>
                   <p class="address">Jln. Kebon Jati No 209 Bandung</p>
-                  <p class="title"><i class="bi bi-check-square me-1"></i>Dress Code Orang Tua/Wali Siswa-Siswi: <strong>Batik</strong></p>
+                  <p class="title"><i class="bi bi-check-square me-1"></i>Dress Code: <strong>Batik</strong></p>
                 </div>
               </div>
             </div>
